<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rootLayout"
    android:background="@color/black"
    android:orientation="vertical"
    android:visibility="visible">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_favorite_clicked" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/its_empty_here"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="40dp"
        android:text="@string/add_favorite_vacancies"
        android:textColor="@color/white" />
</LinearLayout>
