<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <ScrollView
        android:id="@+id/filtersScrollLayout"
        app:layout_constraintBottom_toTopOf="@+id/searchButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/button_back"
                    android:src="@drawable/ic_back_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:paddingHorizontal="26dp"
                    android:text="@string/filters_text"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/resetFiltersButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:enabled="true"
                    android:layout_gravity="end"
                    android:text="@string/reset"
                    android:textColor="@color/DodgerBlue"
                    android:textSize="18sp" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="16dp"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputVacancyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/input_background"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_input_keywords"
                    android:imeOptions="actionSearch"
                    android:paddingStart="40dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:theme="@style/MyEditTextTheme"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:text="@string/filter_search_only_in"
                android:textColor="@color/white" />

            <com.example.hh.main.presentation.CustomRecyclerView
                android:id="@+id/nameRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_search_filter_button" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSalary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/input_background"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_input_salary"
                    android:imeOptions="actionSearch"
                    android:inputType="number"
                    android:paddingStart="40dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:theme="@style/MyEditTextTheme"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/onlyWithSalarySwitchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/Income_indicated"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:text="@string/region"
                android:textColor="@color/white" />

            <com.example.hh.views.button.areabutton.CustomAreaButton
                android:id="@+id/customAreaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cityFragmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:text="@string/button_add_area"
                android:textColor="@color/DodgerBlue"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="26dp"
                android:text="@string/required_experience"
                android:textColor="@color/white" />

            <com.example.hh.main.presentation.CustomRecyclerView
                android:id="@+id/experienceRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_search_filter_button" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="26dp"
                android:text="@string/employment_type"
                android:textColor="@color/white" />

            <com.example.hh.main.presentation.CustomRecyclerView
                android:id="@+id/employmentRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_search_filter_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="26dp"
                android:text="@string/work_schedule"
                android:textColor="@color/white" />

            <com.example.hh.main.presentation.CustomRecyclerView
                android:id="@+id/scheduleRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_search_filter_button" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="90dp" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/searchButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/find_vacancies" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>