<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ModalBottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/standardBottomSheet"
        style="@style/ModalBottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_black_background"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="160dp"
                android:text="@string/hint_input_text"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageButton
                android:layout_gravity="end"
                android:id="@+id/dismissButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dimGray"
                android:contentDescription="@string/button_close_dialog_fragment"
                android:src="@drawable/baseline_close_24" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/inputLayout"
            app:startIconDrawable="@drawable/ic_search"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:imeOptions="actionSearch"
                android:backgroundTint="@color/white"
                android:singleLine="true"
                android:paddingStart="40dp"
                android:theme="@style/MyEditTextTheme"
                android:hint="@string/hint_input_keywords"
                android:background="@drawable/input_background"
                android:textColor="@android:color/black"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.example.hh.views.button.areabutton.CustomAreaButton
            android:id="@+id/cityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="москва" />

        <TextView
            android:id="@+id/addAreaButton"
            android:textColor="@color/DodgerBlue"
            android:text="@string/button_add_area"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="7dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_history" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="700dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>