<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background"
    android:orientation="vertical"
    tools:context=".search.presentation.screen.SearchFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="160dp"
            android:text="@string/search_text"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/dismissButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/button_close_dialog_fragment"
            android:src="@drawable/baseline_close_24" />
    </FrameLayout>

    <com.example.hh.views.input.CustomInputView
        android:id="@+id/inputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.example.hh.views.button.areabutton.CustomAreaButton
        android:id="@+id/cityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        tools:text="москва" />

    <TextView
        android:id="@+id/addAreaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="@string/button_add_area"
        android:textColor="@color/DodgerBlue"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>