<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ModalBottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/standardBottomSheet"
        style="@style/ModalBottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_background"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="160dp"
                android:text="@string/region_text"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <ImageButton
                android:id="@+id/dismissButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/descriptions_close_fragment"
                android:src="@drawable/baseline_close_24" />

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="16dp"
            app:boxStrokeWidth="2dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputAreaEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/input_background"
                android:backgroundTint="@color/white"
                android:hint="@string/hint_input_text"
                android:imeOptions="actionSearch"
                android:paddingStart="40dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:theme="@style/MyEditTextTheme"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="7dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="История поиска" />

        <com.example.hh.main.presentation.CustomRecyclerView
            android:id="@+id/areaRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="700dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black"
        android:orientation="vertical">

        <Button
            android:id="@+id/saveAreaButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/save_area_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>